crates/strz-analysis/tests/snapshots/workspace_discovery__workspace_discovery@remote_include.snap
---
source: crates/strz-analysis/tests/workspace_discovery.rs
expression: "WorkspaceView::from_facts(&facts, &fixture_root)"
---
WorkspaceView {
    documents: [
        WorkspaceDocumentView {
            path: "workspace.dsl",
            kind: Entry,
            discovered_by_scan: true,
            include_targets: [
                "\"https://example.com/base.dsl\"",
            ],
            symbol_bindings: [],
        },
    ],
    includes: [
        WorkspaceIncludeView {
            including_document: "workspace.dsl",
            raw_value: "\"https://example.com/base.dsl\"",
            target_text: "https://example.com/base.dsl",
            target: RemoteUrl {
                url: "https://example.com/base.dsl",
            },
            discovered_documents: [],
        },
    ],
    diagnostics: [
        WorkspaceDiagnosticView {
            document: "workspace.dsl",
            kind: UnsupportedRemoteTarget,
            message: "remote includes are not resolved in the MVP: https://example.com/base.dsl",
            target_text: "https://example.com/base.dsl",
            span: TextSpan {
                start_byte: 16,
                end_byte: 55,
                start_point: TextPoint {
                    row: 1,
                    column: 4,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 43,
                },
            },
            value_span: TextSpan {
                start_byte: 25,
                end_byte: 55,
                start_point: TextPoint {
                    row: 1,
                    column: 13,
                },
                end_point: TextPoint {
                    row: 1,
                    column: 43,
                },
            },
        },
    ],
}
